# vast-validator

./: .gitignore  README.md  pyproject.toml  requirements.txt  vast.xml
schemas/: README.md
vast_validate/: __init__.py  best_practices.py  cli.py  macros.py  openrtb_checks.py  openrtb_extract.py  plain_language.py  schemas.py  validator.py  validator_types.py  wrapper_chain.py  xsd_validate.py
