[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vast-validate"
version = "0.2.0"
description = "Validate VAST XML files against VAST XSD schemas."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "lxml>=5.2.0",
  "colorama>=0.4.6",
]

[project.scripts]
vast-validate = "vast_validate.cli:main"
vast-extract = "vast_validate.openrtb_extract:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["schemas/*.xsd"]
